@@ -5,6 +5,9 @@ Changelog
 1.0.2dev
 --------
 
+* Using interfaces instead of portal_type to determine if context has shop items
+  [lgraf]
+
 * Fixed type of default values for IShopConfiguration.var_rates
   [lgraf]
 
